--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -38,7 +38,7 @@
                         <a class="menu__link" href="#projects">Proyectos</a>
                     </li>
                     <li class="menu__item">
-                        <a class="menu__link" href="#contact">Contacto</a>
+                        <a class="menu__link" href="./views/contact.html">Contacto</a>
                     </li>
                 </ul>
             </nav>
@@ -141,25 +141,6 @@
                             <p>Desarollado con HTML, CSS, Bootstrap 5 y SASS</p>
                             <a href="https://xdysar.github.io/instituto_noa-barria/" target="_blank">Visitar sitio</a>
                         </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- SECTION CONTACT -->
-        <section class="section__six">
-            <div class="container">
-                <div class="section__animation" data-aos="fade-left" data-aos-duration="2000"
-                    data-aos-easing="ease-in-sine" data-aos-easing="linear">
-                    <h3 id="contact">Contactame</h3>
-                    <div class="form__container">
-                        <form class="form">
-                            <input type="text" placeholder="Nombre*" class="form__input">
-                            <input type="email" placeholder="Email*" class="form__input">
-                            <textarea class="form__input--message" placeholder="Escribe el mensaje aqui*"></textarea>
-                            <input type="submit" class="form__cta">
-                        </form>
-                        <img src="./img/hand_coding.svg" alt="Foto de laptop" class="form__img">
                     </div>
                 </div>
             </div>
