--- a/index.html
+++ b/index.html
@@ -53,8 +53,12 @@
                     <div class="hero__texts flex-column">
                         <h1>Lucas Barria</h1>
                         <p>Desarollador Front-End</p>
-                        <a href="./downloads/cv_lucas_barria.pdf" download="cv_lucas_barria.pdf" class="btn">Descargar
-                            CV</a>
+                        
+                        <div class="hero__buttons">
+                            <a href="./downloads/cv_lucas_barria.pdf" download="cv_lucas_barria.pdf" class="btn">Descargar
+                                CV</a>
+                            <a href="./views/contact.html" class="btn">Contacto</a>
+                        </div>
                     </div>
                 </div>
             </div>
