--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             </nav>
         </div>
     </header>
+    
 
     <!-- MAIN -->
     <main class="main">
@@ -70,7 +71,7 @@
             <div class="container">
                 <h2 class="section__two-title" id="sobreMi">¿Quien soy?</h2>
                 <div class="information flex-row">
-                    <img src="./img/Lucas Barria.png" alt="Foto de Lucas Barria" class="info__img">
+                    <img src="./img/Lucas Barria.png" alt="Foto de Lucas Barria" class="info__img" loading="lazy">
                     <div class="information__texts">
                         <h2 class="info__title">Hola, soy <span class="info__title--blue">Lucas Barria</span>.</h2>
                         <p class="info__paragraph">Soy <span class="info__title--blue">Desarollador Front-End</span>,
@@ -88,27 +89,27 @@
                     <h3 class="tecnologies__title" id="tecnologies">Tecnologías</h3>
                     <div class="tecnologies__container">
                         <div class="tecnologies__square">
-                            <img src="./img/html.png" alt="Logo de HTML" class="tecnogies__logo">
+                            <img src="./img/html.png" alt="Logo de HTML" class="tecnogies__logo" loading="lazy">
                             <h4>HTML</h4>
                         </div>
                         <div class="tecnologies__square">
-                            <img src="./img/css.png" alt="Logo de CSS" class="tecnogies__logo">
+                            <img src="./img/css.png" alt="Logo de CSS" class="tecnogies__logo" loading="lazy">
                             <h4>CSS</h4>
                         </div>
                         <div class="tecnologies__square">
-                            <img src="./img/bootstrap_logo.png" alt="Logo de Bootstrap" class="tecnogies__logo">
+                            <img src="./img/bootstrap_logo.png" alt="Logo de Bootstrap" class="tecnogies__logo" loading="lazy">
                             <h4>Bootstrap</h4>
                         </div>
                         <div class="tecnologies__square">
-                            <img src="./img/sass_logo.png" alt="Logo SASS" class="tecnogies__logo">
+                            <img src="./img/sass_logo.png" alt="Logo SASS" class="tecnogies__logo" loading="lazy">
                             <h4>SASS</h4>
                         </div>
                         <div class="tecnologies__square">
-                            <img src="./img/git__logo.png" alt="Logo de GIT" class="tecnogies__logo">
+                            <img src="./img/git__logo.png" alt="Logo de GIT" class="tecnogies__logo" loading="lazy">
                             <h4>GIT</h4>
                         </div>
                         <div class="tecnologies__square">
-                            <img src="./img/github.png" alt="Logo de GitHub" class="tecnogies__logo">
+                            <img src="./img/github.png" alt="Logo de GitHub" class="tecnogies__logo" loading="lazy">
                             <h4>GitHub</h4>
                         </div>
                     </div>
@@ -123,7 +124,7 @@
                 <h3 id="projects">Mis proyectos</h3>
                 <div class="projects__container">
                     <div class="projects">
-                        <img src="./img/instituto_noa.png" alt="Logo instituto NOA" class="projects__img">
+                        <img src="./img/instituto_noa.png" alt="Logo instituto NOA" class="projects__img" loading="lazy">
                         <div class="projects__texts">
                             <h4>Instituto NOA</h4>
                             <p>Desarollado con HTML, CSS, Bootstrap 5 y SASS</p>
@@ -131,7 +132,7 @@
                         </div>
                     </div>
                     <div class="projects">
-                        <img src="./img/instituto_pierre.jpg" alt="Logo instituto Pierre" class="projects__img">
+                        <img src="./img/instituto_pierre.jpg" alt="Logo instituto Pierre" class="projects__img" loading="lazy">
                         <div class="projects__texts">
                             <h4>Instituto Pierre</h4>
                             <p>Desarollado con HTML, CSS, Bootstrap 5 y SASS</p>
@@ -139,7 +140,7 @@
                         </div>
                     </div>
                     <div class="projects">
-                        <img src="./img/jujuy_fashion_music.jpg" alt="Logo Jujuy Fashion Music" class="projects__img">
+                        <img src="./img/jujuy_fashion_music.jpg" alt="Logo Jujuy Fashion Music" class="projects__img" loading="lazy">
                         <div class="projects__texts">
                             <h4>Jujuy Fashion Music</h4>
                             <p>Desarollado con HTML, CSS, Bootstrap 5 y SASS</p>
