--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <section class="section__one">
             <div class="hero">
                 <div class="container">
-                    <div class="hero__texts flex-column">
+                    <div class="hero__texts flex-column" data-aos="zoom-out-left" data-aos-duration="500" data-aos-easing="ease-in-sine" data-aos-easing="linear">
                         <h1>Lucas Barria</h1>
                         <p>Desarollador Front-End</p>
                         
@@ -66,7 +66,7 @@
         </section>
         
         <!-- SECTION INFORMATION -->
-        <section data-aos="fade-right" data-aos-duration="2000" data-aos-easing="ease-in-sine" data-aos-easing="linear"
+        <section data-aos="fade-right" data-aos-duration="1000" data-aos-easing="ease-in-sine" data-aos-easing="linear"
             class="section__two flex-row">
             <div class="container">
                 <h2 class="section__two-title" id="sobreMi">¿Quien soy?</h2>
@@ -84,7 +84,7 @@
         <!-- SECTION TECNOLOGIES -->
         <section class="section__three">
             <div class="container">
-                <div class="tecnologies" data-aos="fade-left" data-aos-duration="2000" data-aos-easing="ease-in-sine"
+                <div class="tecnologies" data-aos="fade-left" data-aos-duration="1500" data-aos-easing="ease-in-sine"
                     data-aos-easing="linear">
                     <h3 class="tecnologies__title" id="tecnologies">Tecnologías</h3>
                     <div class="tecnologies__container">
@@ -118,7 +118,7 @@
         </section>
 
         <!-- SECTION PROJECTS -->
-        <section class="section__four" data-aos="fade-right" data-aos-duration="2000" data-aos-easing="ease-in-sine"
+        <section class="section__four" data-aos="fade-right" data-aos-duration="1000" data-aos-easing="ease-in-sine"
             data-aos-easing="linear">
             <div class="container">
                 <h3 id="projects">Mis proyectos</h3>
@@ -156,7 +156,7 @@
     <!-- FOOTER -->
     <footer class="footer">
         <div class="container">
-            <div class="foo">
+            <div class="foo" data-aos="zoom-out-up" data-aos-duration="500" data-aos-easing="ease-in-sine" data-aos-easing="linear">
                 <h5 class="foo__title">Lucas Barria</h5>
                 <p class="foo__p">Desarollador Front-End</p>
                 <p class="foo__email"><span class="fa-solid fa-envelope"></span>lucasbnicolas@gmail.com</p>
