--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="container">
                 <h2 class="section__two-title" id="sobreMi">¿Quien soy?</h2>
                 <div class="information flex-row">
-                    <img src="./img/Lucas Barria.png" alt="Foto de Lucas Barria" class="info__img" loading="lazy">
+                    <img src="./img/Lucas Barria.png" alt="Foto de Lucas Barria" class="info__img" loading="eager">
                     <div class="information__texts">
                         <h2 class="info__title">Hola, soy <span class="info__title--blue">Lucas Barria</span>.</h2>
                         <p class="info__paragraph">Soy <span class="info__title--blue">Desarollador Front-End</span>,
